<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_marginTop="48dp">

    <ImageView
        android:id="@+id/camera"
        android:layout_width="20dp"
        android:layout_height="50dp"
        android:text="@string/camera"
        android:padding="6dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="?attr/colorPrimary"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:src="@drawable/ic_baseline_photo_camera_24"/>

    <TextView
        android:id="@+id/chat"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/chat"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="?attr/colorPrimary"
        android:layout_weight="1"
        android:textColor="@color/bright_color"/>
    <TextView
        android:id="@+id/status"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/status"
        android:textSize="23sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_weight="1"
        android:background="?attr/colorPrimary"
        android:textColor="@color/light_color"/>
    <TextView
        android:id="@+id/contact"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/contact"
        android:textSize="23sp"
        android:gravity="center"
        android:textStyle="bold"
        android:background="?attr/colorPrimary"
        android:layout_weight="1"
        android:textColor="@color/light_color"/>



</LinearLayout>